plugins {
    id "org.unbroken-dome.test-sets" version "1.4.2"
}

ext.moduleName = 'what.to.watch.core'

apply plugin: 'java'

sourceCompatibility = 1.11
targetCompatibility = 1.11

repositories {
    mavenCentral()
}

compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}

testSets {
    integrationTest
}

test {
    useJUnitPlatform()
}

integrationTest {
    useJUnitPlatform()
}

dependencies {
    compile "com.google.guava:guava:$guavaVersion"
    compile "org.jsoup:jsoup:$jsoupVersion"
    compile "com.squareup.okhttp3:okhttp:$okHttpVersion"
    compile "org.slf4j:slf4j-api:$slf4jVersion"
    compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
    compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    compile "io.micrometer:micrometer-core:$micrometerVersion"

    testCompile "ch.qos.logback:logback-classic:$logbackVersion"
    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testCompile "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
    testCompile "org.mockito:mockito-core:$mockitoVersion"
    testCompile "org.assertj:assertj-core:$assertjVersion"

    integrationTestCompile sourceSets.test.output
}

check.dependsOn integrationTest
integrationTest.mustRunAfter test

println("[what-to-watch-core] Building version: $version")
